# birdy

./: CMakeLists.txt  README.md  build_debug.bat  cmake_mingw_clang_debug.bat  launch_debugger.bat  run.bat
src/: game.cpp  game.h  game_config.h  main.cpp  pipes.cpp  pipes.h  player.cpp  player.h  renderer.cpp  renderer.h  timer.h
